[package]
name = "moonbird"
version = "0.1.0"
authors = ["Nicolás Siplis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "*", features = ["derive"] }
url-escape = "*"
chashmap = "*"
bytes = "*"
again = "*"
futures = "*"
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }