[package]
name = "moonbird"
version = "0.1.0"
authors = ["Nicolás Siplis"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "*"
again = "*"
futures = "*"
clap = { version = "*", features = ["derive"] }
reqwest = { version = "*", features = ["json"] }
serde = { version = "*", features = ["derive"] }
tokio = { version = "*", features = ["full"] }